[components-api] support health-checks and port
Bug: T362072
